--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
 rootProject.name = "repository"
-//include ':Base'
+include ':Base'
 //include ':GsonCommon'
-include ':BaseUI'
-//include ':NetLib'
+//include ':BaseUI'
+include ':NetLib'
 //include ':OKPermission'
 //include ':filepicker'
 //include ':zxing'
