--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,11 @@
 rootProject.name = "repository"
 //include ':Base'
-//include ':GsonCommon'
 //include ':BaseUI'
-include ':NetLib'
+//include ':GsonCommon'
+//include ':NetLib'
 //include ':OKPermission'
-//include ':filepicker'
-//include ':zxing'
+include ':filepicker'
+include ':zxing'
 //include ':SerialPortLib'
 //include ':SerialPortLibrary'
 //include ':VanSerialPort'
