--- a/zxing/src/main/AndroidManifest.xml
+++ b/zxing/src/main/AndroidManifest.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.h4de5ing.zxing">
+    package="com.google.zxing.client.android"
+    android:installLocation="auto">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <application android:allowBackup="true">
+        <activity
+            android:name="com.google.zxing.client.android.CaptureActivity"
+            android:screenOrientation="portrait" />
+    </application>
 </manifest>
