--- a/zxing/src/main/AndroidManifest.xml
+++ b/zxing/src/main/AndroidManifest.xml
@@ -8,8 +8,6 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application android:allowBackup="true">
-        <activity
-            android:name="com.google.zxing.client.android.CaptureActivity"
-            android:screenOrientation="portrait" />
+        <activity android:name="com.google.zxing.client.android.CaptureActivity" />
     </application>
 </manifest>
