1.update dependencies 2.NetLib Download File Progress

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,11 +2,11 @@ rootProject.name = "repository"
 //include ':Base'
 //include ':BaseUI'
 //include ':GsonCommon'
-//include ':NetLib'
+include ':NetLib'
 //include ':OKPermission'
 //include ':filepicker'
 //include ':zxing'
 //include ':SerialPortLib'
-include ':SerialPortLibrary'
+//include ':SerialPortLibrary'
 //include ':VanSerialPort'
 //include ':License'
