--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ rootProject.name = "repository"
 //include ':Base'
 //include ':BaseUI'
 //include ':GsonCommon'
-include ':NetLib'
+//include ':NetLib'
 //include ':OKPermission'
 //include ':filepicker'
 //include ':zxing'
@@ -10,3 +10,4 @@ include ':NetLib'
 //include ':SerialPortLibrary'
 //include ':VanSerialPort'
 //include ':License'
+include ':OTALibrary'
