增加文件下载异常回调

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ rootProject.name = "repository"
 //include ':Base'
 //include ':BaseUI'
 //include ':GsonCommon'
-//include ':NetLib'
+include ':NetLib'
 //include ':OKPermission'
 //include ':filepicker'
 //include ':zxing'
