--- a/filepicker/build.gradle
+++ b/filepicker/build.gradle
@@ -4,12 +4,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    namespace 'com.github.h4de5ing.filepicker'
+    compileSdk 33
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
+        minSdk 24
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -25,12 +24,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-}
-
-dependencies {
-    //implementation 'androidx.core:core-ktx:1.7.0'
-    //implementation 'androidx.appcompat:appcompat:1.3.1'
-    //implementation 'com.google.android.material:material:1.4.0'
 }
 afterEvaluate {
     publishing {
@@ -51,9 +44,7 @@ afterEvaluate {
         }
         repositories {
             mavenLocal()
-            maven {
-                url uri('D://repository/repository/repository')
-            }
+            maven { url uri('D://repository/repository/repository') }
         }
     }
 }
