--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,24 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 rootProject.name = "repository"
 //include ':Base'
 //include ':BaseUI'
 //include ':GsonCommon'
-include ':NetLib'
+//include ':NetLib'
 //include ':OKPermission'
-//include ':filepicker'
+include ':filepicker'
 //include ':zxing'
 //include ':SerialPortLib'
 //include ':SerialPortLibrary'
