解决窗口和提示信息弹出多次的问题

--- a/OTALibrary/src/main/AndroidManifest.xml
+++ b/OTALibrary/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:exported="true"
             android:targetActivity=".ui.OTAActivity"
             android:taskAffinity="${applicationId}"
+            android:launchMode="singleTop"
             android:theme="@style/AppUpdate.UpdateDialog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
