--- a/BaseUI/build.gradle
+++ b/BaseUI/build.gradle
@@ -5,12 +5,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
+    namespace 'com.github.h4de5ing.baseui'
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
+        minSdk 16
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -40,12 +39,6 @@ afterEvaluate {
             def today = new Date().format('yyyyMMdd')
             release(MavenPublication) {
                 from components.release
-                groupId = 'com.github.h4de5ing.baseui'
-                artifactId = 'baseui'
-                version = "1.0-$today"
-            }
-            debug(MavenPublication) {
-                from components.debug
                 groupId = 'com.github.h4de5ing.baseui'
                 artifactId = 'baseui'
                 version = "1.0-$today"
