--- a/GsonCommon/build.gradle
+++ b/GsonCommon/build.gradle
@@ -5,12 +5,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
+    namespace 'com.github.h4de5ing.gsoncommon'
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
+        minSdk 16
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -26,16 +25,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+    kotlinOptions { jvmTarget = '1.8' }
 }
 
 dependencies {
-    //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    //implementation 'androidx.core:core-ktx:1.3.2'
-    //implementation 'androidx.appcompat:appcompat:1.2.0'
-    //implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.code.gson:gson:2.9.0'
 }
 afterEvaluate {
@@ -44,12 +37,6 @@ afterEvaluate {
             def today = new Date().format('yyyyMMdd')
             release(MavenPublication) {
                 from components.release
-                groupId = 'com.github.h4de5ing.gsoncommon'
-                artifactId = 'gsoncommon'
-                version = "1.0-$today"
-            }
-            debug(MavenPublication) {
-                from components.debug
                 groupId = 'com.github.h4de5ing.gsoncommon'
                 artifactId = 'gsoncommon'
                 version = "1.0-$today"
