--- a/NetLib/build.gradle
+++ b/NetLib/build.gradle
@@ -5,10 +5,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
+    namespace 'com.github.h4de5ing.netlib'
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 33
+        minSdk 16
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -24,9 +25,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+    kotlinOptions { jvmTarget = '1.8' }
 }
 
 dependencies {
@@ -41,13 +40,7 @@ afterEvaluate {
                 from components.release
                 groupId = 'com.github.h4de5ing.netlib'
                 artifactId = 'netlib'
-                version = "1.0-$today"
-            }
-            debug(MavenPublication) {
-                from components.debug
-                groupId = 'com.github.h4de5ing.netlib'
-                artifactId = 'netlib'
-                version = "1.0-$today"
+                version = "2.0-$today"
             }
         }
         repositories {
