--- a/SerialPortLib/build.gradle
+++ b/SerialPortLib/build.gradle
@@ -5,12 +5,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
+    namespace 'com.github.h4de5ing.serialportlib'
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
+        minSdk 16
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -27,9 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+    kotlinOptions { jvmTarget = '1.8' }
 }
 afterEvaluate {
     publishing {
@@ -37,12 +34,6 @@ afterEvaluate {
             def today = new Date().format('yyyyMMdd')
             release(MavenPublication) {
                 from components.release
-                groupId = 'com.github.h4de5ing.serialportlib'
-                artifactId = 'serialportlib'
-                version = "1.0-$today"
-            }
-            debug(MavenPublication) {
-                from components.debug
                 groupId = 'com.github.h4de5ing.serialportlib'
                 artifactId = 'serialportlib'
                 version = "1.0-$today"
