--- a/SerialPortLibrary/build.gradle
+++ b/SerialPortLibrary/build.gradle
@@ -6,6 +6,7 @@ plugins {
 
 android {
     compileSdk 33
+    namespace 'com.giftedcat.serialportlibrary'
     defaultConfig {
         minSdk 21
         targetSdk 33
