--- a/SerialPortLib/build.gradle
+++ b/SerialPortLib/build.gradle
@@ -13,7 +13,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-        ndk { abiFilters 'armeabi-v7a', 'arm64-v8a' }
+        ndk { abiFilters 'arm64-v8a', 'armeabi', 'armeabi-v7a', 'x86' }
     }
 
     buildTypes {
