--- a/GsonCommon/build.gradle
+++ b/GsonCommon/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.code.gson:gson:2.9.0'
+    api 'com.google.code.gson:gson:2.9.0'
 }
 afterEvaluate {
     publishing {
