--- a/SerialPortLib/build.gradle
+++ b/SerialPortLib/build.gradle
@@ -13,6 +13,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        //noinspection ChromeOsAbiSupport
         ndk { abiFilters 'arm64-v8a', 'armeabi', 'armeabi-v7a', 'x86' }
     }
 
