--- a/SerialPortLibrary/build.gradle
+++ b/SerialPortLibrary/build.gradle
@@ -10,9 +10,10 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 33
-        ndk { abiFilters 'arm64-v8a', 'armeabi-v7a' }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        //noinspection ChromeOsAbiSupport
+        ndk { abiFilters 'arm64-v8a', 'armeabi-v7a' }
     }
 
     buildTypes {
