--- a/OTALibrary/build.gradle
+++ b/OTALibrary/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.github.h4de5ing.netlib:netlib:1.0-20230227'
     implementation 'com.github.h4de5ing.gsoncommon:gsoncommon:1.0-20211125'
+    implementation 'com.github.h4de5ing.base:base:1.0-20230314'
 }
 afterEvaluate {
     publishing {
