--- a/SerialPortLibrary/build.gradle
+++ b/SerialPortLibrary/build.gradle
@@ -10,22 +10,14 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 33
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
         //noinspection ChromeOsAbiSupport
         ndk { abiFilters 'arm64-v8a', 'armeabi-v7a' }
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions { jvmTarget = '1.8' }
 }
 afterEvaluate {
     publishing {
