--- a/VanSerialPort/build.gradle
+++ b/VanSerialPort/build.gradle
@@ -10,26 +10,14 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 33
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
         //noinspection ChromeOsAbiSupport
         ndk { abiFilters "armeabi", "armeabi-v7a" }
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+    kotlinOptions { jvmTarget = '1.8' }
     sourceSets {
         main {
             jniLibs.srcDirs = ['/src/main/jniLibs']
@@ -54,7 +42,7 @@ afterEvaluate {
         repositories {
             mavenLocal()
             maven {
-                url uri('D://repository/repository/repository')
+                url uri('D://repository/repository/test')
             }
         }
     }
