--- a/filepicker/build.gradle
+++ b/filepicker/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'kotlin-android'
     id 'maven-publish'
 }
 
@@ -9,9 +10,6 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 33
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -24,6 +22,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions { jvmTarget = '1.8' }
 }
 afterEvaluate {
     publishing {
