--- a/OTALibrary/build.gradle
+++ b/OTALibrary/build.gradle
@@ -17,6 +17,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions { jvmTarget = '1.8' }
+    buildFeatures { buildConfig true }
 }
 
 dependencies {
