--- a/Ymode/build.gradle
+++ b/Ymode/build.gradle
@@ -24,9 +24,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+    kotlinOptions { jvmTarget = '1.8' }
     sourceSets {
         main {
             jniLibs.srcDirs = ['/src/main/jniLibs']
