日志库增加日志写入文件，升级依赖

--- a/usbserial/build.gradle
+++ b/usbserial/build.gradle
@@ -13,6 +13,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    publishing {
+        singleVariant('release') {
+            withSourcesJar()
+        }
+    }
 }
 dependencies {
     implementation 'com.annimon:stream:1.2.1'
