--- a/settings.gradle
+++ b/settings.gradle
@@ -17,15 +17,18 @@ rootProject.name = "repository"
 //include ':Base'
 //include ':BaseUI'
 //include ':GsonCommon'
-//include ':NetLib'
+include ':NetLib'
 //include ':filepicker'
 //include ':zxing'
 //include ':SerialPortLib'
 //include ':SerialPortLibrary'
 //include ':VanSerialPort'
 //include ':License'
-//include ':OTALibrary'
+include ':OTALibrary'
 //include ':Document'
 //include ':Ymode'
 //include ':usbSerialForAndroid'
 //include ':usbserial'
+//include ':libcommon'
+//include ':libuvccamera'
+//include ':usbCameraCommon'
