--- a/GsonCommon/build.gradle
+++ b/GsonCommon/build.gradle
@@ -21,23 +21,5 @@ android {
 dependencies {
     api 'com.google.code.gson:gson:2.10.1'
 }
-afterEvaluate {
-    publishing {
-        publications {
-            def today = new Date().format('yyyyMMdd')
-            release(MavenPublication) {
-                from components.release
-                groupId = 'com.github.h4de5ing.gsoncommon'
-                artifactId = 'gsoncommon'
-                version = "1.0-$today"
-            }
-        }
-        repositories {
-            mavenLocal()
-            maven {
-                url uri('D://repository/repository/repository')
-            }
-        }
-    }
-}
+//TODO 废弃不在维护，json解析请使用`org.jetbrains.kotlinx:kotlinx-serialization-json`
 //gradlew publish
