--- a/Base/build.gradle
+++ b/Base/build.gradle
@@ -5,17 +5,16 @@ plugins {
 }
 
 android {
-    compileSdk 35
+    compileSdk 36
     namespace 'com.github.h4de5ing.base'
     defaultConfig {
         minSdk 16
-        targetSdk 35
+        targetSdk 36
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_22
+        targetCompatibility JavaVersion.VERSION_22
     }
-    kotlinOptions { jvmTarget = '1.8' }
 }
 
 afterEvaluate {
