--- a/SerialPortLibrary/build.gradle
+++ b/SerialPortLibrary/build.gradle
@@ -5,19 +5,18 @@ plugins {
 }
 
 android {
-    compileSdk 35
+    compileSdk 36
     namespace 'com.giftedcat.serialportlibrary'
     defaultConfig {
         minSdk 21
-        targetSdk 35
+        targetSdk 36
         //noinspection ChromeOsAbiSupport
         ndk { abiFilters 'arm64-v8a', 'armeabi-v7a' }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_22
+        targetCompatibility JavaVersion.VERSION_22
     }
-    kotlinOptions { jvmTarget = '1.8' }
 }
 afterEvaluate {
     publishing {
