--- a/Ymode/build.gradle
+++ b/Ymode/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     namespace 'com.android.ymode'
-    compileSdk 35
+    compileSdk 36
 
     defaultConfig {
         minSdk 29
@@ -21,10 +21,9 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_22
+        targetCompatibility JavaVersion.VERSION_22
     }
-    kotlinOptions { jvmTarget = '1.8' }
     sourceSets {
         main {
             jniLibs.srcDirs = ['/src/main/jniLibs']
