--- a/settings.gradle
+++ b/settings.gradle
@@ -14,20 +14,20 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "repository"
-//include ':Base'
-//include ':BaseUI'
-//include ':Document'
-//include ':filepicker'
-//include ':libcommon'
-//include ':libuvccamera'
-//include ':License'
+include ':Base'
+include ':BaseUI'
+include ':Document'
+include ':filepicker'
+include ':libcommon'
+include ':libuvccamera'
+include ':License'
 include ':NetLib'
-//include ':OTALibrary'
-//include ':SerialPortLib'
-//include ':SerialPortLibrary'
-//include ':usbCameraCommon'
-//include ':usbserial'
-//include ':usbSerialForAndroid'
-//include ':VanSerialPort'
-//include ':Ymode'
-//include ':zxing'
+include ':OTALibrary'
+include ':SerialPortLib'
+include ':SerialPortLibrary'
+include ':usbCameraCommon'
+include ':usbserial'
+include ':usbSerialForAndroid'
+include ':VanSerialPort'
+include ':Ymode'
+include ':zxing'
