--- a/usbSerialForAndroid/build.gradle
+++ b/usbSerialForAndroid/build.gradle
@@ -4,25 +4,22 @@ plugins {
 }
 
 android {
-    compileSdk 35
+    compileSdk 36
     namespace 'com.hoho.android.usbserial'
     defaultConfig {
         minSdk 17
-        targetSdk 35
+        targetSdk 36
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_22
+        targetCompatibility JavaVersion.VERSION_22
     }
     publishing {
-        // if coverage is enabled, change 'release' to 'anyDeviceRelease' or comment out publishing rule
         singleVariant('release') {
             withSourcesJar()
         }
     }
-    buildFeatures {
-        buildConfig true
-    }
+    buildFeatures { buildConfig true }
 }
 
 dependencies {
