--- a/usbserial/build.gradle
+++ b/usbserial/build.gradle
@@ -3,15 +3,15 @@ plugins {
     id 'maven-publish'
 }
 android {
-    compileSdk 35
+    compileSdk 36
     namespace "com.felhr.usbserial"
     defaultConfig {
         minSdk 17
-        targetSdk 35
+        targetSdk 36
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_22
+        targetCompatibility JavaVersion.VERSION_22
     }
     publishing {
         singleVariant('release') {
@@ -20,8 +20,8 @@ android {
     }
 }
 dependencies {
-    implementation 'com.annimon:stream:1.2.1'
-    implementation 'com.squareup.okio:okio:3.7.0'
+    implementation 'com.annimon:stream:1.2.2'
+    implementation 'com.squareup.okio:okio:3.14.0'
 }
 afterEvaluate {
     publishing {
